# cpumon

./: .gitignore  CMakeLists.txt  Makefile  README.md  cpumon  cpumon.c  cpumonlib  cpumonlib.c  cpumonlib.h  cpureads.h  guilib.c  install  install.sh  test  test.c  test.py
include/: cpumonlib.h  guilib.h  machine_specific_registers.h  sysfs.h  utils.h
src/: cpumon  cpumonlib.c  cpumonlib.h  guilib.c  guilib.h  machine_specific_registers.c  main.c  sysfs.c  utils.c
